Fix z-index

--- a/src/templates/Dashboard/Dashboard.less
+++ b/src/templates/Dashboard/Dashboard.less
@@ -12,7 +12,7 @@
   padding: 0rem;
   transform: translateX(0);
   transition: transform 300ms ease-in-out;
-  z-index: 8;
+  z-index: 7;
   &__hidden {
     transform: translateX(-400px);
   }
